# UMAP

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  FIX_CONSOLIDATED.md  README.md  Review.txt  VERSION_HISTORY.md  review2.txt  review3.txt
.claude/: settings.local.json
UMAPDemo/: DataLoaders.cs  MnistDemo.cs  MnistReader.cs  PacMAPSharp.deps.json  Program.cs  UMAPDemo.csproj  Visualizer.cs
UMAPDemo/gif/: mammoth_10k_hnsw.umap
UMAPuwotSharp/: demo_model.umap  mammoth_10k_hnsw.umap
UMAPuwotSharp/UMAPuwotSharp/: UMAPuwotSharp.csproj  UMapModel.cs
UMAPuwotSharp/UMAPuwotSharp.Example/: Program.cs
UMAPuwotSharp/UMAPuwotSharp.Tests/: PerformanceBenchmarkTests.cs  UMapModelTests.cs
uwot_pure_cpp/: CMakeLists.txt  debug_hnsw_save_load.cpp  debug_hnsw_simple.cpp  debug_quantization_simple.cpp  debug_save_load_test.cpp  debug_transform_accuracy.cpp  errors.txt  hnswalg.h  quick_euclidean_test.cpp  refactoring_demo.cpp  simple_save_load_test.cpp  test_comprehensive_pipeline.cpp  test_consistency_simple.cpp  test_distance_helpers.cpp  test_distance_simple.cpp  test_dual_hnsw_save_load.cpp  test_ef_scaling_simple.cpp  test_ef_search_scaling.cpp  test_embedding_extraction_optimization.cpp  test_embedding_loading_bug.cpp  test_embedding_preservation.cpp  test_quantization_comprehensive.cpp  test_refactoring_validation.cpp  test_standard_comprehensive.cpp  test_zero_norm_handling.cpp  uwot.lib  uwot_crc32.cpp  uwot_distance.cpp  uwot_distance.h  uwot_fit.cpp  uwot_fit.h  uwot_hnsw_utils.cpp  uwot_hnsw_utils.h  uwot_model.cpp  uwot_model.h  uwot_simple_wrapper.cpp  uwot_simple_wrapper.h  uwot_transform.cpp
uwot_pure_cpp/build-debug/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  UMWWGBWrapper.sln  UMWWGBWrapperTargets.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  debug_save_load_test.vcxproj  debug_save_load_test.vcxproj.filters  refactoring_demo.vcxproj  refactoring_demo.vcxproj.filters  test_comprehensive_pipeline.vcxproj  test_comprehensive_pipeline.vcxproj.filters  test_ef_scaling_simple.vcxproj  test_ef_scaling_simple.vcxproj.filters  test_ef_search_scaling.vcxproj  test_ef_search_scaling.vcxproj.filters  test_embedding_extraction_optimization.vcxproj  test_embedding_extraction_optimization.vcxproj.filters  test_enhanced_wrapper.vcxproj  test_enhanced_wrapper.vcxproj.filters  test_error_fixes_simple.vcxproj  test_error_fixes_simple.vcxproj.filters  test_quantization_comprehensive.vcxproj  test_quantization_comprehensive.vcxproj.filters  test_refactoring_validation.vcxproj  test_refactoring_validation.vcxproj.filters  test_standard_comprehensive.vcxproj  test_standard_comprehensive.vcxproj.filters  test_zero_norm_handling.vcxproj  test_zero_norm_handling.vcxproj.filters  uwot_wrapper.vcxproj  uwot_wrapper.vcxproj.filters
uwot_pure_cpp/build-stream-test/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  UMWWGBWrapper.sln  UMWWGBWrapperTargets.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  debug_save_load_test.vcxproj  debug_save_load_test.vcxproj.filters  refactoring_demo.vcxproj  refactoring_demo.vcxproj.filters  test_comprehensive_pipeline.vcxproj  test_comprehensive_pipeline.vcxproj.filters  test_ef_scaling_simple.vcxproj  test_ef_scaling_simple.vcxproj.filters  test_ef_search_scaling.vcxproj  test_ef_search_scaling.vcxproj.filters  test_embedding_extraction_optimization.vcxproj  test_embedding_extraction_optimization.vcxproj.filters  test_enhanced_wrapper.vcxproj  test_enhanced_wrapper.vcxproj.filters  test_error_fixes_simple.vcxproj  test_error_fixes_simple.vcxproj.filters  test_quantization_comprehensive.vcxproj  test_quantization_comprehensive.vcxproj.filters  test_refactoring_validation.vcxproj  test_refactoring_validation.vcxproj.filters  test_standard_comprehensive.vcxproj  test_standard_comprehensive.vcxproj.filters  test_zero_norm_handling.vcxproj  test_zero_norm_handling.vcxproj.filters  uwot_wrapper.vcxproj  uwot_wrapper.vcxproj.filters
uwot_pure_cpp/build-test/: ALL_BUILD.vcxproj  CMakeCache.txt  UMWWGBWrapper.sln  cmake_install.cmake  debug_quantization_simple.vcxproj  debug_quantization_simple.vcxproj.filters  debug_save_load_test.vcxproj  debug_save_load_test.vcxproj.filters  debug_transform_accuracy.vcxproj  debug_transform_accuracy.vcxproj.filters  refactoring_demo.vcxproj  refactoring_demo.vcxproj.filters  test_distance_helpers.vcxproj  test_distance_helpers.vcxproj.filters  test_distance_simple.vcxproj  test_distance_simple.vcxproj.filters  test_ef_scaling_simple.vcxproj  test_ef_scaling_simple.vcxproj.filters  test_ef_search_scaling.vcxproj  test_ef_search_scaling.vcxproj.filters  test_embedding_extraction_optimization.vcxproj  test_embedding_extraction_optimization.vcxproj.filters  test_embedding_preservation.vcxproj  test_embedding_preservation.vcxproj.filters  test_enhanced_wrapper.vcxproj  test_quantization_comprehensive.vcxproj  test_quantization_comprehensive.vcxproj.filters  test_refactoring_validation.vcxproj  test_refactoring_validation.vcxproj.filters  test_zero_norm_handling.vcxproj  test_zero_norm_handling.vcxproj.filters  uwot_wrapper.vcxproj  uwot_wrapper.vcxproj.filters
uwot_pure_cpp/build-zero-norm/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  UMWWGBWrapper.sln  UMWWGBWrapperTargets.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  (+20 more)
uwot_umappp_wrapper/: BuildDockerLinuxWindows.bat  BuildLinux.bat  BuildWindowsOnly.bat  Buildwindows.bat  CMakeLists.txt  Options.hpp  Status.hpp  find_ab.hpp  hnswalg.h  initialize.hpp  neighbor_similarities.hpp  optimize_layout.hpp  spectral_init.hpp  uwot_constants.hpp  uwot_crc32.cpp  uwot_crc32.h  uwot_distance.cpp  uwot_endian_utils.hpp  uwot_fit.cpp  uwot_fit.cpp.backup  uwot_fit.h  uwot_hnsw_knncolle.hpp  uwot_hnsw_utils.cpp  uwot_hnsw_utils.h  uwot_model.cpp  uwot_model.h  uwot_persistence.cpp  uwot_persistence.h  uwot_progress_utils.cpp  uwot_simple_wrapper.cpp  uwot_simple_wrapper.h  uwot_transform.cpp
(+409 files in other folders)
